Update score header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <button id="new-game-button" onclick="newGame()">START NEW GAME</button>
             <div id="guest">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <span class="points" id="guest-points">0</span>
                 <div class="add-buttons">
                     <button id="guest-add-one" class="add-btn" onclick="guestAddOne()">+1</button>
